Add TextProcessorService tests, fix blank strings extraction